--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -10,9 +10,8 @@ permissions:
   contents: read
 
 jobs:
-  terraform:
+  bootstrap-backend:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -26,18 +25,44 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
 
-      - name: Terraform Init
+      - name: Terraform Init (Backend)
         run: |
+          cd envs/bootstrap
           terraform init -input=false
-        working-directory: envs/dev  # ✅ Run Terraform inside the correct directory
 
-      - name: Terraform Plan
+      - name: Terraform Apply (Create Backend)
         run: |
-          terraform plan -input=false -var-file=terraform.tfvars
-        working-directory: envs/dev  # ✅ Run Terraform inside the correct directory
+          cd envs/bootstrap
+          terraform apply -auto-approve -input=false
 
-      - name: Terraform Apply
+  terraform-deploy:
+    needs: bootstrap-backend  # ✅ Ensures this waits for backend creation
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Configure AWS credentials (OIDC)
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/GitHubActionsOIDC
+          aws-region: us-west-2
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+
+      - name: Terraform Init (Main Infrastructure)
+        run: |
+          cd envs/dev
+          terraform init -input=false
+
+      - name: Terraform Plan (Main Infrastructure)
+        run: |
+          cd envs/dev
+          terraform plan -input=false -var-file=terraform.tfvars
+
+      - name: Terraform Apply (Main Infrastructure)
         if: github.ref == 'refs/heads/main'
         run: |
+          cd envs/dev
           terraform apply -auto-approve -input=false -var-file=terraform.tfvars
-        working-directory: envs/dev  # ✅ Run Terraform inside the correct directory
